<?xml version="1.0"?>
<package format="3">
  <name>gz_dynamic_projector</name>
  <version>0.0.0</version>
  <description>A Gazebo plugin to dynamically control a projector.</description>
  <maintainer email="nathanshankar465@gmail.com">nathan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gz-cmake3</depend>
  <depend>gz-plugin2</depend>
  <depend>gz-sim8</depend>
  <depend>gz-rendering8</depend>
  <depend>gz-sensors8</depend>
  <depend>gz-transport12</depend>
  <depend>gz-math7</depend>
  <depend>gz-common5</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>